--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <button id="cero" class="btn">0</button>
         <button class="btn">-</button>    
     </div>
+    <p>Hola</p>
 
     <script src="./js/app.js"></script>
 </body>
